fix: fixing type safety warnings